--- a/packages/docs/pages/app/experiments.mdx
+++ b/packages/docs/pages/app/experiments.mdx
@@ -52,19 +52,29 @@ The Client Libraries never communicate with the Growth Book servers.  That means
 This separation has huge performance and reliability benefits (if Growth Book goes down, it has no effect on your app), but it can be a bit unintuitive when you press the "Stop" button in the UI and people continue to be put into the experiment.
 
 To get the best of both worlds, you can store a cached copy of experiments in Redis (or similar) and keep it up-to-date either by periodically hitting the [Growth Book API](/api-docs) or setting up a [Webhook Endpoint](/app/webhooks). Then your app can query the cache at runtime to get the latest experiment statuses.
+
 ## Results
 
 ![Results Table](/images/results-table.png)
 
 Each row of this table is a different metric.
 
-**Chance to Beat Control** tells you the probability that the variation is better. The closer this gets to 100%, the more likely the variation is better.  The closer it gets to 0% the more likely the variation is worse.
-Numbers in the middle are inconclusive and require more data.  We recommend waiting until it reaches 95% or 5% before deciding on a winner as a general rule of thumb.
+**Risk** tells you how much you are predicted to lose if you choose the selected variation as the winner and you are wrong. Anything below 0.25% is highlighted green indicating the risk is very low and it's safe to call the experiment. You can use the dropdown to see the risk of choosing a different winner.
 
-**Risk** tells you how much you will lose if you choose the variation as the winner, but it ends up actually being worse (no matter how unlikely that is).
+**Value** is the conversion rate or average value per user. In small print you can see the raw numbers used to calculate this.
+
+**Chance to Beat Control** tells you the probability that the variation is better. Anything above 95% is highlighted green indicating a very clear winner.  Anything below 5% is highlighted red, indicating a very clear loser. Anything in between is grayed out indicating it's inconclusive. If that's the case, there's either no measurable difference or you haven't gathered enough data yet.
 
 **Percent Change** shows how much better/worse the variation is compared to the control. It is a probability density graph and the thicker the area, the more likely the true percent change will be there.
 As you collect more data, the tails of the graphs will shorten, indicating more certainty around the estimates.
+
+### Sample Ratio Mismatch (SRM)
+
+Every experiment automatically checks for a Sample Ratio Mismatch and will warn you if found.  This happens when you expect a certain traffic split (e.g. 50/50) but you see something significantly different (e.g. 46/54).
+
+![SRM Warning](/images/srm.png)
+
+Like the warning says, you shouldn't trust the results since they are likely misleading.  Instead, find and fix the source of the bug and restart the experiment.
 
 ### Dimensions
 
