--- a/packages/docs/pages/app/experiments.mdx
+++ b/packages/docs/pages/app/experiments.mdx
@@ -70,16 +70,27 @@ As you collect more data, the tails of the graphs will shorten, indicating more 
 
 ### Sample Ratio Mismatch (SRM)
 
-Every experiment automatically checks for a Sample Ratio Mismatch and will warn you if found.  This happens when you expect a certain traffic split (e.g. 50/50) but you see something significantly different (e.g. 46/54).
+Every experiment automatically checks for a Sample Ratio Mismatch and will warn you if found.  This happens when you expect a certain traffic split (e.g. 50/50) but you see something significantly different (e.g. 46/54).  We only show this warning if the p-value is less than `0.001`, which means it's extremely unlikely to occur by chance.
 
 ![SRM Warning](/images/srm.png)
 
 Like the warning says, you shouldn't trust the results since they are likely misleading.  Instead, find and fix the source of the bug and restart the experiment.
+
+### Guardrails
+
+Guardrail metrics are ones that you want to keep an eye on, but aren't trying to specifically improve with your experiment.
+For example, if you are trying to improve page load times, you may add revenue as a guardrail since you don't want
+to inadvertantly harm it.
+
+Guardrail results show up beneath the main table of metrics and you can click on one to expand it and show more info. They are colored based on "Chance of Being Worse", which is just the complement of "Chance to Beat Control". If there are more than 2 variations, the max value is used to determine the overall color.
+A "Chance of Being Worse" less than 65% is green and of no concern. Between 65% and 85% is yellow and should be watched as more data comes in. Above 90% is red and you may consider stopping the experiment.  If we don't have enough data to accurately predict the "Chance of Being Worse", we will color the metric grey.
+
+![Guardrails](/images/guardrails.png)
 
 ### Dimensions
 
 If you have defined dimensions for your users, you can use the **Dimension** dropdown to drill down into your results.
 This is very useful for debugging (e.g. if Safari is down, but the other browser are fine, you may have an implementation bug).
 
-Be careful, the more metrics and dimensions you look at, the more likely you are to see a false positive. If you find something that looks 
+Be careful. The more metrics and dimensions you look at, the more likely you are to see a false positive. If you find something that looks 
 surprising, it's often worth a dedicated follow-up experiment to verify that it's real.
